@@ -701,6 +701,7 @@ Ross Lagerwall
 Cameron Laird
 David Lam
 Thomas Lamb
+Valerie Lambert
 Jean-Baptiste "Jiba" Lamy
 Ronan Lamy
 Torsten Landschoff
